syntax = "proto3";
package KFMsg;
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
message PBRankData
{
	uint32 rankindex = 1;				// 从1开始
	uint64 playerid = 2;				// 玩家id
	uint64 rankscore = 3;				// 排行的数据( 客户端好友排行根据这个排序 )
	map< string, bytes > pbdata = 4;	// 排行榜数据
}

message PBRankDatas
{
	repeated PBRankData rankdata = 1;	// 排行榜列表
}
